--- a/supervised_learning.ipynb
+++ b/supervised_learning.ipynb
@@ -11,6 +11,14 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Ссылка на репозиторий\n",
+        "[GitHub Project](https://github.com/Rozyyev23/supervised-learning-project)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "c-TVRYLrarR2"
       },
